<resources>
    <string name="app_name">La Favor</string>
    <string name="setting_profile">Profile</string>
    <string name="search">Search</string>
    <string name="hi">Hi</string>
    <string name="shopping_cart">Cart</string>

    <!-- Navbar-->
    <string name="nav_home">Home</string>
    <string name="nav_fav">Favorite</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_prof">Profile</string>

    <!--    Profile-->
    <string name="setting_my_profile">My Profile</string>
    <string name="setting_my_address">My Address</string>
    <string name="setting_my_orders">My Orders</string>
    <string name="setting">Setting</string>
    <string name="setting_about">About Us</string>
    <string name="setting_logout">Log out</string>
    <string name="setting_change_theme">Change theme</string>
    <string name="setting_choose_language">Choose language</string>
    <string name="setting_security">Security</string>
    <string name="company_name">LaFavor Corporation Inc</string>
    <string name="introduction">Lafavor was founded in 2023 by Vision Girl. This is a startup company that made and sold a bunch of bread which are from France. Visit our website to know more: https://lafavor-2c8ce.web. app/</string>
    <string name="AddressStatus">Default</string>
    <string name="no_address_added">No Address Added</string>
    <string name="address_advise">Find and add more address to fulfill your journey with us!</string>
    <string name="setting_edit_profile">Edit Profile</string>
    <string name="address">Address</string>

    <!--    Splashscreen-->
    <string name="skip">Skip</string>
    <string name="title">Find And Get Your Best Cake</string>
    <string name="title1">New Flavor Shipping Nationwide!</string>
    <string name="title2">Discover Our Delectable Menu</string>
    <string name="description">Find the most delicious food with the best quality and free delivery here.</string>
    <string name="description1">We are now shipping our product to your doorstep.</string>
    <string name="description2">Make by hand, from scratch with love.</string>
    <string name="get_started">GET STARTED</string>


    <!--    Favorite-->
    <string name="title_favorite">Favorite</string>
    <string name="favorite">No Favorite yet</string>
    <string name="favorite_content">Explore more and add some products.</string>


    <!--    Coupon-->
    <string name="title_coupon">My Coupon</string>
    <string name="coupon">No Coupon Available</string>
    <string name="coupon_content">But don’t worry, you still get to enjoy the best deals and offers with us! </string>


    <!--     Log in-->
    <string name="log_in">Log In</string>
    <string name="hello_welcome_back_to_your_account">Hello, Welcome back to your account</string>
    <string name="user_email">  User email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="signup">Sign up?</string>
    <string name="Signup">Sign up</string>
    <string name="join_us_on_an_exciting_journey_by_creating_your_account">Join us on an exciting journey by creating your account</string>
    <string name="text">.</string>
    <string name="email">Email</string>
    <string name="number_phone">Number Phone</string>
    <string name="i_accepted_terms_and_privacy_policy">I accepted Terms and Privacy Policy</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="add_address">Add Address</string>
    <string name="edt_full_name">Your full name</string>
    <string name="phone_number">Phone number</string>
    <string name="full_name">Full name</string>
    <string name="edt_phone_numb">Your phone number</string>
    <string name="province">Province</string>
    <string name="district">District</string>
    <string name="ward">Ward</string>
    <string name="street">Street (Include house number)</string>
    <string name="save">Save</string>
    <!-- My Coupon   -->
    <string name="coupon_code">Have a Coupon Code</string>
    <string name="enter_here">Enter here ...</string>
    <string name="apply">Apply</string>
    <string name="promo_code">Promo Code</string>
    <string name="setting_support">Support</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="view_all">View all</string>
    <string name="top_pick_for_you">Top pick for you!</string>
    <string name="review">Review</string>

    <string name="btn_log_in">Log In</string>

    <!--    Dialog Forgot Password-->
    <string name="forgot_password_dialog">Forgot Password</string>
    <string name="enter_your_account_email">Enter your account email</string>
    <string name="reset_password_dialog">Reset Password</string>
    <!--    Dialog Verification Code-->
    <string name="verification_code">Verification Code</string>
    <string name="description_dialog">A verification code has been sent to your mail.</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="change_email"><u>Change email</u></string>

    <!--    Reset Password-->
    <string name="reset_password">Reset Password</string>
    <string name="required">Your password must be at least 8 characters long.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reconfirm_new_password">Reconfirm new password</string>

    <!--     Notification Cart -->
    <string name="notification_cart">Are you sure you want to delete this Strawberry Cupcake from cart?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delivered">Delivered</string>

    <!-- Checkout -->
    <string name="checkout">Checkout</string>
    <string name="add_new_address">Add new address</string>
    <string name="order_summary">Order Summary</string>
    <string name="add_items">Add items</string>
    <string name="payment">Payment methods</string>
    <string name="my_coupon">My coupon</string>
    <string name="subtotal">Subtotal</string>
    <string name="promo">Promo</string>
    <string name="Shipping">Shipping</string>
    <string name="total">Total Payment Amount</string>
    <string name="place_order">Place Order</string>
    <string name="product">Strawberry Cupcake</string>


    <!-- Order Complete -->
    <string name="order_verify">Your order has been received</string>
    <string name="thankyou">Thank you for shopping with us!</string>
    <string name="contrinue">Contrinue</string>
    <string name="order_detail">Order Detail</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="rate">Rate</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="order_note">Order Note</string>
    <string name="home_greeting">What are you eating to day?</string>
    <string name="reset_password_description">Enter your account email for which your want to reset your password</string>


    <!-- Product and Review -->
    <string name="l_chung">Lý Chung</string>
    <string name="coconut_cookies">Coconut Cookies</string>
    <string name="_25_000_vnd">25.0000 VND</string>
    <string name="_30_000_vnd">30.000VND</string>
    <string name="product_description">Shortbread,chocolate turtle cookies, and red velvet</string>
    <string name="description_product">Description</string>
    <string name="review_product">Review</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="write_review">Write Review</string>
    <string name="_4_3">4.3</string>
    <string name="first_fragment_label">First Fragment Label</string>
    <string name="Cooies">Cookies\n</string>
    <string name="home">Home</string>
    <string name="favorite_icon">Favorite</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="get_started_splash1">GET STARTED</string>
    <string name="next">NEXT</string>

    <!-- MainActivity_Navbar -->
</resources>