<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:padding="15dp">
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/Signup"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/join_us_on_an_exciting_journey_by_creating_your_account"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <EditText
        android:id="@+id/edt"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:hint="@string/username"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:background="@drawable/custom_shape_edt"
        android:paddingHorizontal="10dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/email"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edt"
        tools:layout_editor_absoluteX="23dp"
        android:background="@drawable/custom_shape_edt"
        android:paddingHorizontal="10dp" />

    <EditText
        android:id="@+id/edtNumberphone"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:hint="@string/number_phone"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        tools:layout_editor_absoluteX="10dp"
        android:background="@drawable/custom_shape_edt"
        android:paddingHorizontal="10dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"

        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/edtNumberphone"
        tools:layout_editor_absoluteX="10dp"
        android:background="@drawable/custom_shape_edt"
        android:paddingHorizontal="10dp" />

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        tools:layout_editor_absoluteX="10dp"
        android:background="@drawable/custom_shape_edt"
        android:paddingHorizontal="10dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintStart_toStartOf="@+id/edtConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmPassword">

        <CheckBox
            android:id="@+id/cbLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_accepted_terms_and_privacy_policy"
            android:textColor="@color/black" />

    </LinearLayout>
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:background="@drawable/custom_long_button"/>




</androidx.constraintlayout.widget.ConstraintLayout>