<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="150dp"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_cart"
        android:textStyle="bold"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/gray2"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_gravity="center">

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/no"
            android:textStyle="bold"
            android:textSize="12sp"
            android:background="@drawable/corner_notification"
            />

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/yes"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@drawable/corner_notification"
            android:backgroundTint="@color/primary"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
</LinearLayout>