<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:gravity="center">
    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_close_24"
        android:background="@drawable/round_background"
        android:backgroundTint="@color/primary"
        android:layout_gravity="end"
        android:layout_marginBottom="15dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_dialog"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"/>
    <EditText
        android:id="@+id/edtAccountEmail"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_account_email"
        android:textSize="15sp"
        android:background="@drawable/custom_shape_edt"
        android:paddingHorizontal="10dp"/>

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_long_button"
        android:text="@string/reset_password_dialog"
        android:textColor="@color/white" />


</LinearLayout>