<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/lnlItemProduct"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/flProduct"
            android:layout_width="150dp"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/imvThumb"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/background_product"
                android:src="@drawable/cookie1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:src="@drawable/heart_icon" />

        </FrameLayout>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coconut_cookies"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_25_000_vnd"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtNetPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_30_000_vnd"
            android:textColor="@color/gray5"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@drawable/corner_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_gravity="end"
            >

            <TextView
                android:id="@+id/txtRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/_4_3"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/star"
                />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>