<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Checkout"
    android:padding="15dp"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:weightSum="10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_back"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txtCheckout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:layout_weight="9"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/plus_box"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_address"
                    android:textSize="16sp"
                    android:textColor="@color/gray2"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_summary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/gray2"
                        android:layout_weight="7"/>

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/add_items"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:background="@drawable/corner_add_items"
                        android:layout_weight="3"/>
                </LinearLayout>

                <GridView
                    android:id="@+id/gvCheckout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>



</LinearLayout>